--- a/backend/book-club-api/Gemfile
+++ b/backend/book-club-api/Gemfile
@@ -16,6 +16,10 @@ gem 'puma', '~> 3.11'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+# JSON Serializer
+# gem 'fast_jsonapi'
+gem 'active_model_serializers'
+
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
 
